src/snapshots/crochet__parser__tests__function_definition-2.snap
---
source: src/parser.rs
expression: "parse(\"() => 10\")"
---
Program {
    body: [
        Expr {
            span: 0..8,
            expr: Lambda(
                Lambda {
                    span: 0..8,
                    args: [],
                    body: Lit(
                        Num(
                            Num {
                                span: 6..8,
                                value: "10",
                            },
                        ),
                    ),
                    is_async: false,
                },
            ),
        },
    ],
}
