src/snapshots/crochet__parser__tests__function_definition-3.snap
---
source: src/parser.rs
expression: "parse(\"(a) => \\\"hello\\\"\")"
---
Program {
    body: [
        Expr {
            span: 0..14,
            expr: Lambda(
                Lambda {
                    span: 0..14,
                    args: [
                        Ident(
                            Ident {
                                span: 1..2,
                                name: "a",
                            },
                        ),
                    ],
                    body: Lit(
                        Str(
                            Str {
                                span: 7..14,
                                value: "hello",
                            },
                        ),
                    ),
                    is_async: false,
                },
            ),
        },
    ],
}
