src/snapshots/crochet__parser__tests__function_definition.snap
---
source: src/parser.rs
expression: "parse(\"(a, b) => c\")"
---
Program {
    body: [
        Expr {
            span: 0..11,
            expr: Lambda(
                Lambda {
                    span: 0..11,
                    args: [
                        Ident(
                            Ident {
                                span: 1..2,
                                name: "a",
                            },
                        ),
                        Ident(
                            Ident {
                                span: 4..5,
                                name: "b",
                            },
                        ),
                    ],
                    body: Ident(
                        Ident {
                            span: 10..11,
                            name: "c",
                        },
                    ),
                    is_async: false,
                },
            ),
        },
    ],
}
