src/snapshots/crochet__parser__tests__if_else.snap
---
source: src/parser.rs
expression: "parse(\"if (true) { 5 } else { 10 }\")"
---
Program {
    body: [
        Expr {
            span: 0..27,
            expr: IfElse(
                IfElse {
                    span: 0..27,
                    cond: Lit(
                        Bool(
                            Bool {
                                span: 4..8,
                                value: true,
                            },
                        ),
                    ),
                    consequent: Lit(
                        Num(
                            Num {
                                span: 12..13,
                                value: "5",
                            },
                        ),
                    ),
                    alternate: Lit(
                        Num(
                            Num {
                                span: 23..25,
                                value: "10",
                            },
                        ),
                    ),
                },
            ),
        },
    ],
}
