src/snapshots/crochet__parser__tests__jsx-4.snap
---
source: src/parser.rs
expression: "parse(\"<Foo>{<Bar>{baz}</Bar>}</Foo>\")"
---
Program {
    body: [
        Expr {
            span: 0..29,
            expr: JSXElement(
                JSXElement {
                    span: 0..29,
                    name: "Foo",
                    attrs: [],
                    children: [
                        JSXExprContainer(
                            JSXExprContainer {
                                span: 5..23,
                                expr: JSXElement(
                                    JSXElement {
                                        span: 6..22,
                                        name: "Bar",
                                        attrs: [],
                                        children: [
                                            JSXExprContainer(
                                                JSXExprContainer {
                                                    span: 11..16,
                                                    expr: Ident(
                                                        Ident {
                                                            span: 12..15,
                                                            name: "baz",
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        },
    ],
}
